# VTSOLVE

./: .gitignore  Makefile  README.md  pyproject.toml
data/: data_format.json  observations.json
src/vtsolve/: __init__.py  constants.py  get_asteroid_pos.py  main.py
src/vtsolve/conversions/: coordinates.py  orbit_elements.py
src/vtsolve/dynamics/: __init__.py  kepler.py  observer.py  propagation.py
src/vtsolve/pipeline/: __init__.py  data_importer.py  iod.py
